# signal-studio-auth

./: .dockerignore  .env.example  AUDIT.md  BRAINSTORM.md  Dockerfile  MIGRATION_GUIDE.md  PLAN.md  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  test_client_ip.py  test_xff_fix.py
.github/workflows/: ci.yml
.venv-test/: pyvenv.cfg
config/: __init__.py  logging_config.py  redis_config.py  supabase_config.py
mapping/: __init__.py  user_mapping.py
middleware/: _compat.py  rbac.py  security_headers.py  supabase_auth_middleware.py  trusted_proxy.py
migrations/: 001_organizations.sql  002_user_profiles.sql  003_rls_existing_tables.sql
routes/: auth_routes.py
tests/: test_auth.py  test_connection_pool.py  test_password_reset.py  test_rate_limit_and_tokens.py  test_rbac.py  test_redis_integration.py  test_security.py  test_security_headers.py  test_session_revocation.py  test_startup_env_validation.py  test_structured_logging_and_edge_cases.py  test_trusted_proxy.py
